Final Full-Stack Update: S3, 360 Tours, and Security